[gd_scene load_steps=11 format=3 uid="uid://dqvregjwuy0dy"]

[ext_resource type="Script" path="res://Minigames/ImagePuzzle.gd" id="1_aohml"]
[ext_resource type="Texture2D" uid="uid://brts0xb204817" path="res://Art/cuties-modified.png" id="2_2ey77"]
[ext_resource type="Texture2D" uid="uid://c7kqd825smnjs" path="res://Art/cuties-modified(1).png" id="3_ikx7t"]
[ext_resource type="Texture2D" uid="uid://lscivg5kx0ux" path="res://Art/cuties-modified(3).png" id="4_l3o6v"]
[ext_resource type="Texture2D" uid="uid://de2nw5b06lh4m" path="res://Art/Player_bubugame_transp.png" id="5_bcqgm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pcr8m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_648a4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w5b3q"]
radius = 108.074

[sub_resource type="CircleShape2D" id="CircleShape2D_gah5d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jk7qk"]
size = Vector2(10, 240)

[node name="ImagePuzzle" type="Node2D"]
script = ExtResource("1_aohml")

[node name="ImagePiece1" type="Area2D" parent="."]
rotation = 1.5708

[node name="Sprite2D" type="Sprite2D" parent="ImagePiece1"]
texture = ExtResource("2_2ey77")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ImagePiece1"]
polygon = PackedVector2Array(3, -184, 1, -241, 123, -207, 194, -141, 230, -66, 238, 0, 225, 84, 176, 165, 103, 218, -2, 241, -103, 218, -182, 161, -226, 83, -242, 0, -223, -93, -173, -166, -98, -220, 1, -241, 1, -183, -84, -167, -143, -120, -178, -55, -184, -2, -173, 66, -132, 125, -77, 171, 0, 186, 79, 173, 137, 126, 175, 63, 185, 0, 183, -41, 158, -99, 103, -152)

[node name="AlignmentPiece" type="Area2D" parent="ImagePiece1" groups=["Alignment"]]
position = Vector2(0, -231)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImagePiece1/AlignmentPiece"]
shape = SubResource("CircleShape2D_pcr8m")

[node name="ImagePiece2" type="Area2D" parent="."]
rotation = 3.14159

[node name="Sprite2D" type="Sprite2D" parent="ImagePiece2"]
texture = ExtResource("3_ikx7t")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ImagePiece2"]
polygon = PackedVector2Array(-2, -179, -83, -156, -140, -110, -174, -32, -177, 22, -152, 85, -115, 132, -55, 170, 0, 183, 63, 165, 119, 130, 162, 76, 178, 24, 174, -46, 150, -96, 99, -148, 39, -175, 2, -181, 1, -147, 1, -117, 70, -97, 108, -45, 118, 14, 99, 63, 59, 102, 1, 119, -51, 104, -96, 66, -115, 11, -107, -44, -77, -89, -25, -112, 1, -117)

[node name="AlignmentPiece2" type="Area2D" parent="ImagePiece2" groups=["Alignment"]]
position = Vector2(0, -151)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImagePiece2/AlignmentPiece2"]
shape = SubResource("CircleShape2D_648a4")

[node name="ImagePiece3" type="Area2D" parent="."]
rotation = 3.92699

[node name="Sprite2D" type="Sprite2D" parent="ImagePiece3"]
texture = ExtResource("4_l3o6v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImagePiece3"]
shape = SubResource("CircleShape2D_w5b3q")

[node name="AlignmentPiece3" type="Area2D" parent="ImagePiece3" groups=["Alignment"]]
position = Vector2(0, -92)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImagePiece3/AlignmentPiece3"]
shape = SubResource("CircleShape2D_gah5d")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AlignmentArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlignmentArea"]
position = Vector2(0.5, -121)
shape = SubResource("RectangleShape2D_jk7qk")

[node name="PlayerBubugameTransp" type="Sprite2D" parent="."]
position = Vector2(13, -148)
texture = ExtResource("5_bcqgm")

[connection signal="mouse_entered" from="ImagePiece1" to="." method="_on_image_piece_1_mouse_entered"]
[connection signal="mouse_exited" from="ImagePiece1" to="." method="_on_image_piece_1_mouse_exited"]
[connection signal="mouse_entered" from="ImagePiece2" to="." method="_on_image_piece_2_mouse_entered"]
[connection signal="mouse_exited" from="ImagePiece2" to="." method="_on_image_piece_2_mouse_exited"]
[connection signal="mouse_entered" from="ImagePiece3" to="." method="_on_image_piece_3_mouse_entered"]
[connection signal="mouse_exited" from="ImagePiece3" to="." method="_on_image_piece_3_mouse_exited"]
[connection signal="area_entered" from="AlignmentArea" to="." method="_on_alignment_area_area_entered"]
